fix: adjust margin of collapse content and remove redundant about__collapse styles

--- a/src/components/Collapse/Collapse.scss
+++ b/src/components/Collapse/Collapse.scss
@@ -64,10 +64,6 @@
 }
 
 @media (min-width: 769px) and (max-width: 1440px) {
-  .about__collapse {
-    margin: 0 50px;
-  }
-
   .collapse__title {
     font-size: 18px;
     border-radius: $medium-radius;
@@ -75,7 +71,7 @@
   }
 
   .collapse__content {
-    margin-top: -10px;
+    margin-top: -14px;
     border-radius: 0 0 $medium-radius $medium-radius;
   }
 
